tests/paczka1/fuzzy1/37186156.err
Error in line 4: 4hvMPNh S600 48,1
Error in line 9: S600 A572 85,7
Error in line 14: 4hvMPNh S600 54,14
Error in line 16: cyXOb S600 23,9
Error in line 18: 7i1BF S997 34,20
Error in line 6: AjZ A572 25,5
Error in line 15: cyX5Ob S600 7,0
Error in line 20: cyX5Ob A572 16,7
Error in line 11: 4hvMPNh S997 89,4
Error in line 29: cyX5Ob A572 68,3
Error in line 32: cyX5Ob S997 55,8
